Se implemento un endpoint para poder desde otro microservicio acceder a la informacion del usuario como lo es el nombre, especializacion y credenciales si el role es tutor, mediante el id del usuario